Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18114

Foreign Key Constraint actions don't affect Virtual Column

Details

    Description

      One of my tables has several columns with FK ON DELETE SET NULL constraints on them, plus one virtual column with mildly complex expression based on these FK columns.

      When a DELETE is issued on the foreign table, the FK fields get set to NULL but the STORED Virtual column is not updated.

      There is no trace of this behaviour on the documentation.

      Attachments

        Issue Links

          Activity

            People

              elenst Elena Stepanova
              a_marchand_canada Aurelien Marchand
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.