sql/item.h
@@ -2005,15 +2005,6 @@ public:
     return 0;
   }
 
-  /**
-    Check db/table_name if they defined in item and match arg values
-
-    @param arg Pointer to Check_table_name_prm structure
-
-    @retval true Match failed
-    @retval false Match succeeded
-  */
-  virtual bool check_table_name_processor(void *arg) { return false; }
   /* 
     TRUE if the expression depends only on the table indicated by tab_map
     or can be converted to such an exression using equalities.
@@ -2211,15 +2202,6 @@ public:
     uint count;
     int nest_level;
     bool collect;
-  };
-
-  struct Check_table_name_prm
-  {
-    LEX_CSTRING db;
-    LEX_CSTRING table_name;
-    String field;
-    Check_table_name_prm(LEX_CSTRING _db, LEX_CSTRING _table_name) :
-      db(_db), table_name(_table_name) {}
   };
 
   /*
@@ -3591,24 +3573,6 @@ public:
       item_equal= NULL;
     }
     return 0;
-  }
-  bool check_table_name_processor(void *arg) override
-  {
-    Check_table_name_prm &p= *static_cast<Check_table_name_prm*>(arg);
-    if (!field && p.table_name.length && table_name.length)
-    {
-      DBUG_ASSERT(p.db.length);
-      if ((db_name.length &&
-          my_strcasecmp(table_alias_charset, p.db.str, db_name.str)) ||
-          my_strcasecmp(table_alias_charset, p.table_name.str, table_name.str))
-      {
-        print(&p.field, (enum_query_type) (QT_ITEM_ORIGINAL_FUNC_NULLIF |
-                                          QT_NO_DATA_EXPANSION |
-                                          QT_TO_SYSTEM_CHARSET));
-        return true;
-      }
-    }
-    return false;
   }
   void cleanup() override;
   Item_equal *get_item_equal() override { return item_equal; }
